# DMXEngine

./: .gitignore  CMakeLists.txt  CompileShaders.bat  DMXengine.cpp  DMXengine.h  Makefile  Mesh.cpp  Mesh.h  README.md  Renderer.cpp  Renderer.h  fs.shader  glad.c  shader.frag  shader.vert  vs.shader
include/: stdbool.h
include/vulkan/glm/: geometric.hpp
include/vulkan/vulkan/: vulkan_core.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
src/: main.c
